# OpenGLTests

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/examples/: first_triangle.h  textures_example.h  transform.h
include/graphics/: shader.h  texture.h
include/window/: window.h
shaders/: fragment.frag.glsl  texture.frag.glsl  transform.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  vertex.vert.glsl
src/: main.cpp
src/examples/: first_triangle.cpp  textures_example.cpp  transform.cpp
src/graphics/: shader.cpp  shader.h  texture.cpp
src/window/: window.cpp
